# ITS-BRD-VSC

Programs/Aufgabe1/: .clangd  Aufgabe1.cbuild-idx.yml  Aufgabe1.cbuild-set.yml  Aufgabe1.cproject.yml  Aufgabe1.csolution.yml  vcpkg-configuration.json
Programs/Aufgabe1/Inc/: display.h  myError.h  scanner.h  stack.h  token.h
Programs/Aufgabe1/Src/: display.c  main.c  scanner.c  stack.c
Programs/Aufgabe1/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
Programs/Aufgabe1/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Programs/Aufgabe1/tmp/Aufgabe1.Debug+ITSboard/: CMakeLists.txt  groups.cmake  toolchain.cmake
Programs/Aufgabe1/tmp/Aufgabe1.Debug+ITSboard/src/Aufgabe1.Debug+ITSboard-stamp/: Aufgabe1.Debug+ITSboard-configure-.cmake  Aufgabe1.Debug+ITSboard-database-.cmake  Aufgabe1.Debug+ITSboard-source_dirinfo.txt
Programs/Aufgabe1/tmp/Aufgabe1.Debug+ITSboard/tmp/: Aufgabe1.Debug+ITSboard-cfgcmd.txt  Aufgabe1.Debug+ITSboard-mkdirs.cmake
Programs/Aufgabe2/: .clangd  Aufgabe2.cbuild-idx.yml  Aufgabe2.cbuild-pack.yml  Aufgabe2.cproject.yml  Aufgabe2.csolution.yml
Programs/Aufgabe2/Inc/: calc.h  input.h  output.h
Programs/Aufgabe2/Rechteckgenerator/: pio_2_squarewaves.uf2
Programs/Aufgabe2/Rechteckgenerator/Python_GUI/: gui.py  main.py  my_exceptions.py
Programs/Aufgabe2/Rechteckgenerator/Python_GUI/GUI/: help_button_widget.py  input_scale_widget.py  my_msg_box_widget.py  select_label_widget.py  selection_box_widget.py  traffic_light_widget.py
Programs/Aufgabe2/Rechteckgenerator/Python_GUI/UnitTests/: test_decimal_fraction.py
Programs/Aufgabe2/Rechteckgenerator/Python_GUI/basics/: active_queue.py  decimal_fraction.py  event_thread.py  my_string_var.py  my_thread.py
Programs/Aufgabe2/Rechteckgenerator/Python_GUI/pi/: pi_answer.py  pi_answer_queue.py  pi_pico.py  pi_protocol.py  serial_wrapper.py
Programs/Aufgabe2/Src/: calc.c  input.c  main.c  output.c
Programs/Aufgabe2/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
Programs/Aufgabe2/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Programs/Aufgabe2/tmp/Aufgabe2.Debug+ITSboard/: CMakeLists.txt  groups.cmake  toolchain.cmake
Programs/Aufgabe2/tmp/Aufgabe2.Debug+ITSboard/src/Aufgabe2.Debug+ITSboard-stamp/: Aufgabe2.Debug+ITSboard-configure-.cmake  Aufgabe2.Debug+ITSboard-database-.cmake  Aufgabe2.Debug+ITSboard-source_dirinfo.txt
Programs/Aufgabe2/tmp/Aufgabe2.Debug+ITSboard/tmp/: Aufgabe2.Debug+ITSboard-cfgcmd.txt  Aufgabe2.Debug+ITSboard-mkdirs.cmake
Programs/Stack/: .clangd  Stack.cbuild-idx.yml  Stack.cbuild-set.yml
Programs/TestNewFont/: .clangd  TestNewFont.cbuild-idx.yml  TestNewFont.cbuild-set.yml
Programs/TestNewFont/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
Programs/TestNewFont/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Programs/TestNewFont/tmp/TestNewFont.Debug+ITSboard/: CMakeLists.txt  groups.cmake
Programs/TestNewFont/tmp/TestNewFont.Debug+ITSboard/src/TestNewFont.Debug+ITSboard-stamp/: TestNewFont.Debug+ITSboard-configure-.cmake  TestNewFont.Debug+ITSboard-database-.cmake  TestNewFont.Debug+ITSboard-source_dirinfo.txt
Programs/TestNewFont/tmp/TestNewFont.Debug+ITSboard/tmp/: TestNewFont.Debug+ITSboard-cfgcmd.txt  TestNewFont.Debug+ITSboard-mkdirs.cmake
Programs/Testordner/: .clangd  Testordner.cbuild-idx.yml  Testordner.cbuild-set.yml  Testordner.cproject.yml  Testordner.csolution.yml
Programs/Testordner/Src/: main.c
Programs/Testordner/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
Programs/Testordner/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Programs/Testordner/tmp/Testordner.Debug+ITSboard/: CMakeLists.txt  groups.cmake  toolchain.cmake
Programs/Testordner/tmp/Testordner.Debug+ITSboard/src/Testordner.Debug+ITSboard-stamp/: Testordner.Debug+ITSboard-configure-.cmake  Testordner.Debug+ITSboard-database-.cmake  Testordner.Debug+ITSboard-source_dirinfo.txt
Programs/Testordner/tmp/Testordner.Debug+ITSboard/tmp/: Testordner.Debug+ITSboard-cfgcmd.txt  Testordner.Debug+ITSboard-mkdirs.cmake
